--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
-    "mongodb": "^5.2.0",
-    "moongose": "^1.0.0",
-    "nodemon": "^2.0.22",
+    "express-flash-message": "^2.1.0",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^7.0.0",
     "nunjucks": "^3.2.3"
+  }, "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
