--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.15.0",
     "express-flash-message": "^2.1.0",
     "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.0",
     "nunjucks": "^3.2.3"
-  }, "devDependencies": {
+  },
+  "devDependencies": {
     "nodemon": "^2.0.21"
   }
 }
