--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,6 +21,8 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.0",
+    "node-boleto": "^2.2.1",
+    "node-cron": "^3.0.2",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
