--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash-message": "^2.1.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.0",
