--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acadmin",
   "version": "1.0.0",
-  "description": "",
+  "description": "none",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,7 +23,7 @@
     "mongoose": "^7.0.0",
     "node-cron": "^3.0.2",
     "nunjucks": "^3.2.3",
-    "puppeteer": "^20.1.2"
+    "puppeteer": "^20.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
